@@ -5,6 +5,7 @@ glibc (2.30-0experimental2) UNRELEASED; urgency=medium
   * debian/patches/any/submitted-stt-gnu-ifunc-detection.patch: fix
     STT_GNU_IFUNC assembler and linker detection for toolchains defaulting to
     PIE.
+  * debian/sysdeps/mips*.mk: drop -no-pie.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Feb 2020 22:10:26 +0100
 
